[tool.poetry]
name = "day-50"
version = "0.1.0"
description = ""
authors = ["Gabdullin_Alex <alexrexp@gmail.com>"]
readme = "README.md"
packages = [{include = "day_50"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
